<resources>
    <string name="app_name">Strip Tease</string>
    <string name="olivier">#olivier</string>
    <string name="colonel">#colonel</string>
    <string name="copain">#copain</string>
    <string name="tuer">#tuer</string>
    <string name="ouvrir">#ouvrir</string>
    <string name="couper">#couper</string>
    <string name="recherche_bergere">Recherche bergère désespérément</string>
    <string name="tuning">135.3 db</string>
    <string name="petard_nuptial">Pétard Nuptial</string>
    <string name="coquin">#coquin</string>
    <string name="fromage">#fromage</string>
    <string name="chante">#chante</string>
</resources>
