<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ccl.com.stripteasemoments.MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">


        <Button
            android:id="@+id/couper"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:text="@string/couper"
            android:onClick="launchSong"
            android:background="@android:color/holo_blue_bright"
            android:tag="@string/recherche_bergere"
            />

        <Button
            android:id="@+id/ouvrir"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:text="@string/ouvrir"
            android:background="@android:color/holo_purple"
            android:onClick="launchSong"
            android:tag="@string/recherche_bergere"
            />

        <Button
            android:id="@+id/tuer"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="2"
            android:layout_row="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:text="@string/tuer"
            android:background="@android:color/holo_red_light"
            android:onClick="launchSong"
            android:tag="@string/recherche_bergere"
            />

        <Button
            android:id="@+id/copain"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:text="@string/copain"
            android:background="@android:color/holo_orange_dark"
            android:onClick="launchSong"
            android:tag="@string/recherche_bergere"
            />

        <Button
            android:id="@+id/colonel"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:text="@string/colonel"
            android:background="@android:color/holo_green_light"
            android:onClick="launchSong"
            android:tag="@string/petard_nuptial"
            />

        <Button
            android:id="@+id/olivier"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="2"
            android:layout_row="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:text="@string/olivier"
            android:background="@android:color/holo_blue_dark"
            android:onClick="launchSong"
            android:tag="@string/tuning"
            />

        <Button
            android:id="@+id/coquin"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:text="@string/coquin"
            android:background="@android:color/holo_green_light"
            android:onClick="launchSong"
            android:tag="@string/recherche_bergere"
            />

        <Button
            android:id="@+id/fromage"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:text="@string/fromage"
            android:background="@android:color/holo_orange_light"
            android:onClick="launchSong"
            android:tag="@string/recherche_bergere"
            />

        <Button
            android:id="@+id/chante"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="2"
            android:layout_row="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:text="@string/chante"
            android:background="@android:color/holo_blue_bright"
            android:onClick="launchSong"
            android:tag="@string/recherche_bergere"
            />

    </GridLayout>
</RelativeLayout>
